test/bad/generics/type03.px

func f<A,B,C>(A x, B y) C def
    return x + y

f(0, "")
